--- a/libros-server/libros-api/src/main/webapp/WEB-INF/web.xml
+++ b/libros-server/libros-api/src/main/webapp/WEB-INF/web.xml
@@ -18,4 +18,71 @@
 		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
 
+	<login-config>
+		<auth-method>BASIC</auth-method>
+		<!-- <realm-name>westerios</realm-name> -->
+	</login-config>
+	<security-role>
+		<role-name>registered</role-name>
+	</security-role>
+
+	<security-role>
+		<role-name>admin</role-name>
+	</security-role>
+
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>LibrosRootAPI</web-resource-name>
+			<url-pattern>/*</url-pattern>
+
+		</web-resource-collection>
+
+	</security-constraint>
+
+
+
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>Librosadmin</web-resource-name>
+			<url-pattern>/libros/*</url-pattern>
+			<http-method>GET</http-method>
+			<http-method>POST</http-method>
+			<http-method>PUT</http-method>
+			<http-method>DELETE</http-method>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>admin</role-name>
+			<role-name>registered</role-name>
+		</auth-constraint>
+	</security-constraint>
+
+
+
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>registeredinusers</web-resource-name>
+			<url-pattern>/users/*</url-pattern>
+			<http-method>GET</http-method>
+			<http-method>PUT</http-method>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>registered</role-name>
+		</auth-constraint>
+	</security-constraint>
+
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>admininusers</web-resource-name>
+			<url-pattern>/users/*</url-pattern>
+			<http-method>GET</http-method>
+			<http-method>POST</http-method>
+			<http-method>PUT</http-method>
+			<http-method>DELETE</http-method>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>admin</role-name>
+		</auth-constraint>
+	</security-constraint>
+
+
 </web-app>
